; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/libFLAC/extr_bitreader.c_FLAC__bitreader_skip_bits_no_crc.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/libFLAC/extr_bitreader.c_FLAC__bitreader_skip_bits_no_crc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @FLAC__bitreader_skip_bits_no_crc(%struct.TYPE_5__* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i32 %1, i32* %5, align 4
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %10 = icmp ne %struct.TYPE_5__* null, %9
  %11 = zext i1 %10 to i32
  %12 = call i32 @FLAC__ASSERT(i32 %11)
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %14 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 0, %15
  %17 = zext i1 %16 to i32
  %18 = call i32 @FLAC__ASSERT(i32 %17)
  %19 = load i32, i32* %5, align 4
  %20 = icmp ugt i32 %19, 0
  br i1 %20, label %21, label %67

21:                                               ; preds = %2
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 8
  %25 = and i32 %24, 7
  store i32 %25, i32* %6, align 4
  %26 = load i32, i32* %6, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %42

28:                                               ; preds = %21
  %29 = load i32, i32* %6, align 4
  %30 = sub i32 8, %29
  %31 = load i32, i32* %5, align 4
  %32 = call i32 @MIN(i32 %30, i32 %31)
  store i32 %32, i32* %7, align 4
  %33 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %34 = load i32, i32* %7, align 4
  %35 = call i32 @FLAC__bitreader_read_raw_uint32(%struct.TYPE_5__* %33, i32* %8, i32 %34)
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %38, label %37

37:                                               ; preds = %28
  store i32 0, i32* %3, align 4
  br label %68

38:                                               ; preds = %28
  %39 = load i32, i32* %7, align 4
  %40 = load i32, i32* %5, align 4
  %41 = sub i32 %40, %39
  store i32 %41, i32* %5, align 4
  br label %42

42:                                               ; preds = %38, %21
  %43 = load i32, i32* %5, align 4
  %44 = udiv i32 %43, 8
  store i32 %44, i32* %7, align 4
  %45 = load i32, i32* %7, align 4
  %46 = icmp ugt i32 %45, 0
  br i1 %46, label %47, label %56

47:                                               ; preds = %42
  %48 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %49 = load i32, i32* %7, align 4
  %50 = call i32 @FLAC__bitreader_skip_byte_block_aligned_no_crc(%struct.TYPE_5__* %48, i32 %49)
  %51 = icmp ne i32 %50, 0
  br i1 %51, label %53, label %52

52:                                               ; preds = %47
  store i32 0, i32* %3, align 4
  br label %68

53:                                               ; preds = %47
  %54 = load i32, i32* %5, align 4
  %55 = urem i32 %54, 8
  store i32 %55, i32* %5, align 4
  br label %56

56:                                               ; preds = %53, %42
  %57 = load i32, i32* %5, align 4
  %58 = icmp ugt i32 %57, 0
  br i1 %58, label %59, label %66

59:                                               ; preds = %56
  %60 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %61 = load i32, i32* %5, align 4
  %62 = call i32 @FLAC__bitreader_read_raw_uint32(%struct.TYPE_5__* %60, i32* %8, i32 %61)
  %63 = icmp ne i32 %62, 0
  br i1 %63, label %65, label %64

64:                                               ; preds = %59
  store i32 0, i32* %3, align 4
  br label %68

65:                                               ; preds = %59
  br label %66

66:                                               ; preds = %65, %56
  br label %67

67:                                               ; preds = %66, %2
  store i32 1, i32* %3, align 4
  br label %68

68:                                               ; preds = %67, %64, %52, %37
  %69 = load i32, i32* %3, align 4
  ret i32 %69
}

declare dso_local i32 @FLAC__ASSERT(i32) #1

declare dso_local i32 @MIN(i32, i32) #1

declare dso_local i32 @FLAC__bitreader_read_raw_uint32(%struct.TYPE_5__*, i32*, i32) #1

declare dso_local i32 @FLAC__bitreader_skip_byte_block_aligned_no_crc(%struct.TYPE_5__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
